<resources>
    <string name="app_name">18NOV</string>

    <string name="name">Amir Mohammed</string>
    <string name="register_screen">Register screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="course_name">Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>